[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
nom = "7.1.3"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
